@@ -214,7 +214,7 @@
       <component name="balsa" dir="balsa">
 	<podir dir="po"/>
 	<potname name="balsa.pot"/>
-	<branch name="HEAD"/>
+	<branch name="BALSA_1_4_x"/>
 	<regenerate/>
 	<download/>
       </component>
@@ -223,7 +223,7 @@
       <component name="balsa" dir="balsa">
         <podir dir="po"/>
         <potname name="balsa.pot"/>
-        <branch name="BALSA_2"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
@@ -232,7 +232,7 @@
       <component name="balsa" dir="balsa">
         <podir dir="po"/>
         <potname name="balsa.pot"/>
-        <branch name="BALSA_2"/>
+        <branch name="HEAD"/>
         <regenerate/>
         <download/>
       </component>
