@@ -1,3 +1,7 @@
+2003-01-21  Christian Neumair  <chris@gnome-de.org>
+
+	* translation-status.xml: balsa has been branched. Reflect this.
+
 2003-01-21  Christian Rose  <menthos@menthos.com>
 
 	* translation-status.xml: gnome-utils has been branched for
